data/issues_nolabel/nolabel_test_3620.txt
Building Android version on Ubuntu 16.04 failed.

Error message as below:
tensorflow/core/platform/env.cc:304:9:
error: conflicting return type specified for ‘virtual tensorflow::int64 tensorflow::{anonymous}::FileStream::ByteCount() const’
   int64 ByteCount() const override { return pos_; }
         ^
In file included from ./tensorflow/core/platform/default/protobuf.h:26:0,
                 from ./tensorflow/core/platform/protobuf.h:31,
                 from ./tensorflow/core/platform/file_system.h:28,
                 from ./tensorflow/core/platform/env.h:27,
                 from tensorflow/core/platform/env.cc:23:
/usr/local/include/google/protobuf/io/zero_copy_stream.h:172:17: error:   overriding ‘virtual google::protobuf::int64 google::protobuf::io::ZeroCopyInputStream::ByteCount() const’
   virtual int64 ByteCount() const = 0;

I was trying to build an Android version Tensorflow on Ubuntu 16.04 according to   Tensorflow's docs .
This error happened, after I executed this:
make -f tensorflow/contrib/makefile/Makefile TARGET=ANDROID